fix overflow when table image is missing

--- a/web/theme/cab/style.css
+++ b/web/theme/cab/style.css
@@ -56,6 +56,7 @@
       flex: 0 0 75%;
       align-items: center;
       justify-content: center;
+      overflow: hidden;
       /* outline: 10px solid white; */
       padding: 0;
     }
